--- a/header.tex
+++ b/header.tex
@@ -130,10 +130,8 @@
 \usepackage[shortcuts]{extdash}
 
 \author{%
-  AUTOR A\\%
-  \href{mailto:authorA@udo.edu}{authorA@udo.edu}%
+  Robin Pelkner\\%
   \texorpdfstring{\and}{,}%
-  AUTOR B\\%
-  \href{mailto:authorB@udo.edu}{authorB@udo.edu}%
+  Joshua Althüser\\%
 }
 \publishers{TU Dortmund – Fakultät Physik}
