--- a/main.tex
+++ b/main.tex
@@ -3,9 +3,9 @@
 \subject{VERSUCH NUMMER}
 \title{TITEL}
 \date{%
-  Durchführung: DATUM
+  Durchführung: 30.10.2018
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 06.11.2018
 }
 
 \begin{document}
