--- a/header.tex
+++ b/header.tex
@@ -131,7 +131,9 @@
 
 \author{%
   Robin Pelkner\\%
+  robin.pelkner@tu-dortmund.de%
   \texorpdfstring{\and}{,}%
   Joshua Althüser\\%
+  joshua.althueser@tu-dortmund.de%
 }
 \publishers{TU Dortmund – Fakultät Physik}
