--- a/content/tabelle1.tex
+++ b/content/tabelle1.tex
@@ -6,7 +6,7 @@
 		\centering
 		\begin{tabular}{S[table-format=4.0] S[table-format=3.1] S[table-format=2.1]}
 			\toprule
-			{$\Delta\phi$} & {$U_\text{out} / V$} & {$U_\text{out}$} \\
+			{$\Delta\phi$} & {$U_\text{low}$ / V} & {$U_\text{out}$ / V} \\
 			\midrule
 			  0° &  17.5 &  1.3 \\
 			 15° &  20.0 &  1.7 \\
@@ -29,7 +29,7 @@
 		\centering
 		\begin{tabular}{S[table-format=4.0] S[table-format=3.1] S[table-format=2.1]}
 			\toprule
-			{$\Delta\phi$} & {$U / V$} & {$U_\text{out}$} \\
+			{$\Delta\phi$} & {$U_\text{low}$ / V} & {$U_\text{out}$ / V} \\
 			\midrule
 			  0° &  20.0 &  1.3 \\
 			 15° &  25.0 &  1.7 \\
