--- a/lit.bib
+++ b/lit.bib
@@ -1,5 +1,5 @@
-@manual{sample,
+@manual{V303,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
-  year = 2014
+  title = {Versuchsanleitung - V303 - Lock-In Verstärker},
+  year = 2018
 }
