--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \input{header.tex}
 
-\subject{V303}
+\subject{V303 - Lock-In Verstärker}
 \title{Lock-In Verstärker}
 \date{%
   Durchführung: 30.11.2018
@@ -19,6 +19,7 @@
 \input{content/durchfuehrung.tex}
 \input{content/auswertung.tex}
 \input{content/diskussion.tex}
+\nocite{V303}
 
 \printbibliography{}
 
