Schönheitsfehler Auswertung/Diskussion

--- a/content/tabelle2.tex
+++ b/content/tabelle2.tex
@@ -1,5 +1,7 @@
 \begin{table}[!htp]
   \centering
+  \caption{Messung der Intesität einer LED an einer Photodiode.}
+  \label{tab:intensity}
   \begin{tabular}{S[table-format=1.1] S[table-format=1.4]}
     \toprule
     {$r$ / m} & {$U_\text{LED}$ / mV} \\
