--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,5 @@
 \documentclass[
+  ngerman,                % Autoref auf deutsch
   bibliography=totoc,     % Literatur im Inhaltsverzeichnis
   captions=tableheading,  % Tabellenüberschriften
   titlepage=firstiscover, % Titelseite ist Deckblatt
