--- a/content/auswertung.tex
+++ b/content/auswertung.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Auswertung}
 \subsection{Messung von verrauschten und unverrauschten Signalen}
 \label{sec:Auswertung}
@@ -5,8 +6,7 @@
 Zunächst wurde die konstate Spannung des Funktionsgenerators gemessen. Diese wird von dem Oscillator-Ausgang bereitgestellt und beträgt $U_\text{const} = 3.2$V\!. Der Reference-Ausgang liefert eine variable Spannungsamplitude $U_\text{ref}$.
 Die Frequenzen sind jeweils einstellbar.
 
-%Gleichungsreferenz hinzufügen
-Die Phasenverschiebung der beiden Signale lässt sich mithilfe von Python auf circa 45° bestimmen. Mit dieser Information und GLEICHUNG! (5) lässt sich nun auch $U_\text{out}$ berechnen.
+Die Phasenverschiebung der beiden Signale lässt sich mithilfe von Python 3.7.0 auf circa 45° bestimmen. Mit dieser Information und \autoref{eqn:u_out} lässt sich nun auch $U_\text{out}$ berechnen.
 Diese beiden sind in den foglenden beiden Messwerttabellen gegeneinander aufgeführt.
 %Größenordnungen der Messwerte überprüfen
 \input{../content/tabelle1.tex}
@@ -30,7 +30,7 @@ Low-Pass-Filter gemessene Spannung. Auffällig ist, dass die errechnte Spannung,
   \end{subfigure}
   \begin{subfigure}{0.32\textwidth}
     \centering
-    \includegraphics[width=0.95\textwidth]{content/45deg.png}
+    \includegraphics[width=0.95\textwidth]{content/90deg.png}
     \caption{$\Delta\phi = 90°$}
     \label{fig:90-deg}
   \end{subfigure}
@@ -78,9 +78,9 @@ Die Frequenzen sind annähernd gleich, eben so wie die Phasenverschiebung zwisch
   \label{fig:plot_phase_rauschen}
 \end{figure}
 
-Die Graphen wurden nach der Form $f(x)=a\cdot \cos(b\cdot x+c)$ geplottet. Mithilfe von Python lassen sich die unverrauschten Werte als
+Die Graphen wurden nach der Form $f(x)=a\cdot \cos(b\cdot x+c)$ geplottet. Mithilfe von Python 3.7.0 lassen sich die unverrauschten Werte als
 \\ \\
-\centerline{$a=24.7 \pm 0.5$V}
+\centerline{$a=(24.7 \pm 0.5)$V}
 \centerline{$b=0.018 \pm 3\cdot 10^\text{-7}$}
 \centerline{$c=-0.860 \pm 0.004$}
 \\ \\
@@ -89,7 +89,8 @@ bestimmen. Für die verrauschten Werte ergibt sich:
 \centerline{$a=(29.5 \pm 0.4)$V}
 \centerline{$b=0.018 \pm 1.8\cdot 10^\text{-7}$}
 \centerline{$c=-0.849 \pm 0.003$}
-\\ \\
+
+\newpage
 \subsection{Messung von Lichtintensität einer LED und einer Photodiode}
 
 Um diesen Teil korrekt auswerten zu können werden einige Einstellungen am Gerät benötigt:
@@ -101,17 +102,18 @@ Um diesen Teil korrekt auswerten zu können werden einige Einstellungen am Gerä
      & \multicolumn{3}{c}{Vertärkung (Amplifier)} \\
     Frequenz / Hz & Pre-Amplifier & Lock-In & Tiefpass \\
     \midrule
-    300 & 100 & 2 & 5 \\
+    300 & 100 & 5 & 2 \\
     \bottomrule
   \end{tabular}
 \end{table}
 
 Im Folgenden wurden die Gesamtverstärkung von 1000 bereits herausgerechnet. Es konnte keine Distanz $r_\text{max}$ bestimmt werden, ab der die Photodiode keine Spannung mehr emittierte. Daher wurde die Messung bis zum durch den Messchieber begrenzten Abstand $r_\text{max}$ von $1.3$m durchgeführt.
-Die Abstrahlung von einer Lichtquelle wie einer LED ist kugelförmig, daraus lässt sich die abgestrahlte Leistung als
+
+Die Abstrahlung von einer Lichtquelle wie einer LED ist kugelförmig; daraus lässt sich die abgestrahlte Leistung als
 \\ \\
-\centerline{$P = I\cdot 4\pi r^2$.}
+\centerline{$P = I\cdot 4\pi r^2$}
 \\ \\
-So lässt sich leicht zeigen, dass für die Intensität $I$
+bestimmen. So lässt sich leicht zeigen, dass für die Intensität $I$
 \\ \\
 \centerline{$I\sim \frac{1}{r^2}$}
 \\ \\
@@ -123,15 +125,17 @@ Die Spannung lässt sich ingesamt in Abhängigkeit von $r$ als
 \\ \\
 \centerline{$U(r) = \frac{a}{(r+b)^2} +c$}
 \\ \\
-beschreiben. Die Koeffizienten lassen sich mittels Python bestimmen und sind
+beschreiben. Die Koeffizienten lassen sich mittels Python 3.7.0 bestimmen und sind
 \\ \\
 \centerline{$a=(0.182\pm 0.002)$ \!mV m²}
 \centerline{$b=(0.0656\pm 0.0008)$ \!m}
 \centerline{$c=(-0.080\pm 0.001)$ \!mV}
 \\ \\
-Das Signal wird erwartungsgemäß proportional $\frac{1}{r^2}$ kleiner.
+Das Signal wird erwartungsgemäß proportional zu $\frac{1}{r^2}$ kleiner.
 
 \input{../content/tabelle2.tex}
+
+Die gemessenen Werte sind in \autoref{tab:intensity} zu finden. Zur Veranschaulichung wurden diese Werte in einem Plot aufgenommen und ein Fit darübergelegt. Dieser ist in \autoref{fig:plot_intensity} zu sehen.
 
 \begin{figure}
   \centering
