--- a/content/durchfuehrung.tex
+++ b/content/durchfuehrung.tex
@@ -1,2 +1,18 @@
-\section{Durchführung}
+\section{Aufbau und Durchführung}
 \label{sec:Durchführung}
+Zunächst wurde die Funktionsweise des Signal Processors bzw. Lock-In Amplifier des Lock-In-Verstärkers betrachtet.
+Dabei wurden die Spannungsamplituden der Ausgänge Reference und Oscillator
+auf Variation bzw. Konstanz mittels eines angeschlossenen digitalen Oszillators hin
+überprüft. Der konstante Amplitudenwert wurde notiert.
+Anschließend sollte die Schaltung, welche in Abbildung \ref{unknown} zu sehen ist, schrittweise aufgebaut werden, wobei der Noise Generator für diesen
+Teil ersteinmal überbrückt werden sollte. Zuerst wurde nur ein Sinusförmiges Eingangssignal $U_\text{sig}$ mit einer Frequenz von 1 kHz und einer Spannung von 10 mV auf den
+Verstärker gegeben und danach mit einer ebenfalls sinusförmigen Referenzspannung $U_\text{ref}$, gleicher Frequenz, gemischt. Das resultierende Signal wurde auf dem digitalen Oszilloskop
+ausgegeben. Für fünf verschiedene Phasen der Referenzspannung, welche am Reference Ausgang einstellbar ist, wurde eine Grafik erstellt.
+Anschließend sollte die Schaltung, wie in Abbildung \ref{unknown}, vollständig nachgebaut werden, wobei der Noise Generator weiterhin überbrückt wurde.
+Nun sollte wieder das Ausgangssignal betrachtet werden, welches nun allerdings integriert wurde, das heißt mit Nutzung des angeschlossenen Tiefpasses. In diesem Aufbau wurden verschiedene Ausgangsspannungen 
+in Abhängigkeit von der Phasenverschiebung der Referenzspannung aufgenommen, welche wieder am Reference Ausgang verändert wurde.
+In einem nächsten Schritt wurde der Noise Generator wie in Abbildung \ref{unknown} angeschlossen. Zu Beachten war, dass sich die vom Noise Generator erzeugten Rauschsignale in der
+selben Größenordnung befanden wie die Signalspannung $U_\text{sig}$. Wie schon zuvor wurde nun wieder die Ausgangspannung $U_\text{out}$ in Abhängigkeit der Phasenverschiebung aufgenommen.
+
+In einem letzten Schritt sollte der Lock-In-Verstärker auf die Rauschunterdrückung hin untersucht werden.
+Hierzu wurde, wie in Abbildung \ref{unknown} dargestellt, 
