Durchführung und Theorie fertig

--- a/lit.bib
+++ b/lit.bib
@@ -3,3 +3,9 @@
   title = {Versuchsanleitung - V303 - Lock-In Verstärker},
   year = 2018
 }
+@online{diode,
+author ={Uni Göttingen},
+title = {Die Photodiode},
+date ={2018},
+url = {lp.uni-goettingen.de/get/text/4741}
+}
