--- a/content/theorie.tex
+++ b/content/theorie.tex
@@ -8,7 +8,7 @@ Die Funktionsweise eines Lock-In-Verstärkers soll kennengelernt und überprüft
     Dazu wird ein Messsignal durch ein Referenzfrequenz $\omega_0$ moduliert, anschließend wird das
     hierzugehörige Nutzsignal $U_\text{sig}$ durch einen Bandpassfilter von Rauschanteilen mit höheren und niedrigeren Frequenzen
     befreit. Danach wird das Signal, wie auch in Abbildung \ref{fig:funktion} zu sehen, mit einem Referenzsignal
-    $U_\text{ref}$, welches dieselbe Frequenz $\omega_0$ wie $U_\text{sig}$ hat, multipliziert. Die Phase $\Phi$ der Referenzspannung im Vergleich zu $U_sig$
+    $U_\text{ref}$, welches dieselbe Frequenz $\omega_0$ wie $U_\text{sig}$ hat, multipliziert. Die Phase $\Phi$ der Referenzspannung im Vergleich zu $U_\text{sig}$
     ist dabei durch einen Phasenschieber veränderlich. 
     Für eine zu messende Sinusspannung, wie im Versuch, gilt also
     \begin{equation}
