--- a/content/auswertung.tex
+++ b/content/auswertung.tex
@@ -3,16 +3,16 @@
 \subsection{Messung von verrauschten und unverrauschten Signalen}
 \label{sec:Auswertung}
 
-Zunächst wurde die konstate Spannung des Funktionsgenerators gemessen. Diese wird von dem Oscillator-Ausgang bereitgestellt und beträgt $U_\text{const} = 3.2$V\!. Der Reference-Ausgang liefert eine variable Spannungsamplitude $U_\text{ref}$.
+Zunächst wird die konstate Spannung des Funktionsgenerators gemessen. Diese wird von dem Oscillator-Ausgang bereitgestellt und beträgt $U_\text{const} = 3.2$V\!. Der Reference-Ausgang liefert eine variable Spannungsamplitude $U_\text{ref}$.
 Die Frequenzen sind jeweils einstellbar.
 
 Die Phasenverschiebung der beiden Signale lässt sich mithilfe von Python 3.7.0 auf circa 45° bestimmen. Mit dieser Information und \autoref{eqn:u_out} lässt sich nun auch $U_\text{out}$ berechnen.
 Diese beiden sind in den foglenden beiden Messwerttabellen gegeneinander aufgeführt.
-%Größenordnungen der Messwerte überprüfen
+
 \input{../content/tabelle1.tex}
 
 $\Delta\phi$ beschreibt hier bei die am Phasenverschieber eingestellte Phasenverschiebung zwischen dem Oscillator- und dem Reference-Signal und $U_\text{low}$ beschreibt die am
-Low-Pass-Filter gemessene Spannung. Auffällig ist, dass die errechnte Spannung, um eine Größenordnung abweicht. Dies geht vermutlich auf ein fehlerhaftes Ablesen der Messskala zurück. Diese Abweichung wird im Weiteren nicht beachtet, da die Kurvenform lediglich in der Amplitude abweicht und nicht in Frequenz oder Phasenverschiebung.
+Low-Pass-Filter gemessene Spannung.
 
 \begin{figure}
   \centering
@@ -60,9 +60,7 @@ Low-Pass-Filter gemessene Spannung. Auffällig ist, dass die errechnte Spannung,
 In \autoref{fig: graphen} sind die durch den Tiefpass entstehenden Wellen bei der jeweils angegebenen Phasenverschiebung durch den Phasenverschieber. Diese Graphen entstehen durch das nicht verrauschte Signal.
 Für das verrauschte Signal haben die Graphen jedoch dieselbe Form, mit der Ausnahme, dass diese an der $x$-Achse gespiegelt sind.
 
-Die Messdaten aus \autoref{tab: Phasenverschiebung} wurden zur besseren Einsicht geplottet und es wurde ein sinusförmiger Fit über die Messwerte gelegt.
-Es ist zu bemerken, dass die Werte in der Messung ohne Rauschen ein wenig kleiner waren, als jene der Messung mit Rauschen.
-Die Frequenzen sind annähernd gleich, eben so wie die Phasenverschiebung zwischen $U_\text{const}$ und $U_\text{ref}$. Dies war zu erwarten, da das Rauschen durch den Lock-In-Filter größtenteils herausgefiltert wird.
+Die Messdaten aus \autoref{tab: Phasenverschiebung} werden zur besseren Einsicht geplottet und es wird ein cosinusförmiger Fit über die Messwerte gelegt.
 
 \begin{figure}
   \centering
@@ -78,17 +76,17 @@ Die Frequenzen sind annähernd gleich, eben so wie die Phasenverschiebung zwisch
   \label{fig:plot_phase_rauschen}
 \end{figure}
 
-Die Graphen wurden nach der Form $f(x)=a\cdot \cos(b\cdot x+c)$ geplottet. Mithilfe von Python 3.7.0 lassen sich die unverrauschten Werte als
+Die Graphen werden nach der Form $f(x)=a\cdot \cos(x+b)$ geplottet. Mithilfe von Python 3.7.0 lassen sich die unverrauschten Werte als
 \\ \\
-\centerline{$a=(24.7 \pm 0.5)$V}
-\centerline{$b=0.018 \pm 3\cdot 10^\text{-7}$}
-\centerline{$c=-0.860 \pm 0.004$}
+\centerline{$a= (24.6 \pm 0.7)$V}
+\centerline{$b= -0.80 \pm 0.03$}
 \\ \\
 bestimmen. Für die verrauschten Werte ergibt sich:
 \\ \\
-\centerline{$a=(29.5 \pm 0.4)$V}
-\centerline{$b=0.018 \pm 1.8\cdot 10^\text{-7}$}
-\centerline{$c=-0.849 \pm 0.003$}
+\centerline{$a= (29.5 \pm 0.7)$V}
+\centerline{$b= -0.79 \pm 0.02$}
+\\ \\
+Die Werte für $b$ sind dabei in Radiant-Werten angegben. 
 
 \newpage
 \subsection{Messung von Lichtintensität einer LED und einer Photodiode}
@@ -107,7 +105,7 @@ Um diesen Teil korrekt auswerten zu können werden einige Einstellungen am Gerä
   \end{tabular}
 \end{table}
 
-Im Folgenden wurden die Gesamtverstärkung von 1000 bereits herausgerechnet. Es konnte keine Distanz $r_\text{max}$ bestimmt werden, ab der die Photodiode keine Spannung mehr emittierte. Daher wurde die Messung bis zum durch den Messchieber begrenzten Abstand $r_\text{max}$ von $1.3$m durchgeführt.
+Im Folgenden ist die Gesamtverstärkung von 1000 bereits herausgerechnet. Es kann keine Distanz $r_\text{max}$ bestimmt werden, ab der die Photodiode keine Spannung mehr emittiert. Daher wird die Messung bis zum durch den Messchieber begrenzten Abstand $r_\text{max}$ von $1.3$m durchgeführt.
 
 Die Abstrahlung von einer Lichtquelle wie einer LED ist kugelförmig; daraus lässt sich die abgestrahlte Leistung als
 \\ \\
@@ -121,23 +119,18 @@ gilt. Da die gemessene Spannung linear von der Intensität abhängt, gilt außer
 \\ \\
 \centerline{$U\sim \frac{1}{r^2}$.}
 \\ \\
-Die Spannung lässt sich ingesamt in Abhängigkeit von $r$ als
-\\ \\
-\centerline{$U(r) = \frac{a}{(r+b)^2} +c$}
-\\ \\
-beschreiben. Die Koeffizienten lassen sich mittels Python 3.7.0 bestimmen und sind
-\\ \\
-\centerline{$a=(0.182\pm 0.002)$ \!mV m²}
-\centerline{$b=(0.0656\pm 0.0008)$ \!m}
-\centerline{$c=(-0.080\pm 0.001)$ \!mV}
-\\ \\
-Das Signal wird erwartungsgemäß proportional zu $\frac{1}{r^2}$ kleiner.
-
 \input{../content/tabelle2.tex}
 
-Die gemessenen Werte sind in \autoref{tab:intensity} zu finden. Zur Veranschaulichung wurden diese Werte in einem Plot aufgenommen und ein Fit darübergelegt. Dieser ist in \autoref{fig:plot_intensity} zu sehen.
+Die gemessenen Werte sind in \autoref{tab:intensity} zu finden.
 
-
+Die Spannung $U$ wird in \autoref{fig:plot_intensity} in Abhängigkeit vom Abstand $r$ dargestellt. Dabei besitzen die Skalen auf beiden Achsen logarithmische Werte.
+Mithilfe von Python 3.7.0 wird nun eine lineare Regression durchgeführt, sodass sich eine Funktion der Form $\symup{ln}(U) = \symup{ln}(ar + b)$ ergibt.
+Dadruch ergeben sich folgende Werte:
+\\ \\
+\centerline{$a = (-1.89 \pm 0.08)$ ln($\frac{\symup{U}}{\symup{m}}$)}
+\\ \\
+\centerline{$b = (-2.23 \pm 0.07)$ ln(U)}
+\\ \\ 
 \begin{figure}
   \centering
   \includegraphics{plot_intensity.pdf}
