--- a/content/theorie.tex
+++ b/content/theorie.tex
@@ -3,7 +3,6 @@
 Die Funktionsweise eines Lock-In-Verstärkers soll kennengelernt und überprüft werden.
 \section{Theorie}
 \label{sec:Theorie}
-\subsection{Lock-In-Verstärker}
     Ein Lock-In-Verstärker wird vorallem zur genauen Messung von verrauschten Signalen verwendet.
     Dazu wird ein Messsignal durch ein Referenzfrequenz $\omega_0$ moduliert, anschließend wird das
     hierzugehörige Nutzsignal $U_\text{sig}$ durch einen Bandpassfilter von Rauschanteilen mit höheren und niedrigeren Frequenzen
@@ -32,8 +31,7 @@ Die Funktionsweise eines Lock-In-Verstärkers soll kennengelernt und überprüft
     \begin{equation}
         U_\text{out} = \frac{2}{\pi} U_0
     \end{equation}
-    vereinfacht. Der Tiefpassfilter kann dabei eine fast beliebig kleine Bandbreite $\Delta \nu  = \frac{1}{\pi R C}$ haben, da sich die Zeitkonstante $\Tau = R C$ sehr groß wählen lässt.
-    Hierdurch sind Güten mit bis zu $Q = 100000$ möglich.
+    vereinfacht. 
     \begin{figure*}[!h]
         \centering
         \includegraphics{content/abbildung1.png}
@@ -41,8 +39,3 @@ Die Funktionsweise eines Lock-In-Verstärkers soll kennengelernt und überprüft
         \label{fig:funktion}
         \end{figure*}
         \newpage
-\subsection{Photodiode}
-    Bei der Photodiode handelt es sich um eine p-n-Diode, welche an einem p-n-Übergang eintreffende Photonen in elektrischen Strom umwandeln. 
-    Der Effekt der dabei in der Diode stattfindet nennt sich Photoeffekt. Dabei bewirken die Photonen 
-    in der Sperrschicht ein Elektron-Loch-Paar. Da es sich hierbei um einen Halbleiter handelt, werden die Elektronen zur n-Seite und die Löcher zur p-Seite beschleunigt.
-    Hierdurch kommt es zur Erhöhung der Elektrischen Feldstärke am Übergang, was schlussendlich einen elektrischen Strom bewirkt. \cite{diode}
