--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 
 \input{content/theorie.tex}
 \input{content/durchfuehrung.tex}
+\input{content/fehlerrechnung.tex}
 \input{content/auswertung.tex}
 \input{content/diskussion.tex}
 \nocite{V303}
