--- a/content/fehlerrechnung.tex
+++ b/content/fehlerrechnung.tex
@@ -3,7 +3,7 @@
 Wenn fehlerhafte Größen in Rechnungen verwendet werden, so muss der neue Fehler mittels der Gaußschen Fehlerfortpflanzung berechnet werden. Der neue Fehler ist dann
 \begin{equation}
 \label{eqt:fehlerfortpflanzung}
-\Delta f = \sqrt{\sum_{i=0}^N \bigl( \frac{\partial f}{\partial x_i} \bigr) ^2 \cdot (\Delta x_i)^2 },
+\Delta f = \sqrt{\sum_{i=0}^N \Bigl( \frac{\partial f}{\partial x_i} \Bigr) ^2 \cdot (\Delta x_i)^2 },
 \end{equation}
 wobei $f$ die zu errechnende Größe bezeichnte und die $x_i$ die fehlerbehaften Größen, von denen $f$ abhängt.
 Wenn Mittelwerte zu bestimmen sind, errechnen sich diese durch
