--- a/content/fehlerrechnung.tex
+++ b/content/fehlerrechnung.tex
@@ -30,6 +30,6 @@ a = \frac {\sum_{i=1}^N (x_i - \overline{x}) (y_i - \overline{y})}{\sum_{i=1}^N 
 und
 \begin{equation}
 \label{eqt:b}
-b = \overline{y} - a \cdot \overline(x)
+b = \overline{y} - a \cdot \overline{x}
 \end{equation}
 zu berechnen.
